--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -74,10 +74,10 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActivosFijosDataSet.Designer.cs">
+    <Compile Include="ActivosFijosDataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ActivosFijosDataSet.xsd</DependentUpon>
+      <DependentUpon>ActivosFijosDataSet2.xsd</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -217,11 +217,11 @@
     <Compile Include="FrmacfACFp_Activo_Fijo.Designer.cs">
       <DependentUpon>FrmacfACFp_Activo_Fijo.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmReporteMVM.cs">
+    <Compile Include="FrmMVMReporte.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmReporteMVM.Designer.cs">
-      <DependentUpon>FrmReporteMVM.cs</DependentUpon>
+    <Compile Include="FrmMVMReporte.Designer.cs">
+      <DependentUpon>FrmMVMReporte.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -329,16 +329,15 @@
     <EmbeddedResource Include="FrmacfACFp_Activo_Fijo.resx">
       <DependentUpon>FrmacfACFp_Activo_Fijo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmReporteMVM.resx">
-      <DependentUpon>FrmReporteMVM.cs</DependentUpon>
+    <EmbeddedResource Include="FrmMVMReporte.resx">
+      <DependentUpon>FrmMVMReporte.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report2.rdlc" />
-    <EmbeddedResource Include="Report4.rdlc" />
+    <EmbeddedResource Include="Report6.rdlc" />
     <EmbeddedResource Include="UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </EmbeddedResource>
@@ -350,16 +349,16 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ActivosFijosDataSet.xsc">
-      <DependentUpon>ActivosFijosDataSet.xsd</DependentUpon>
+    <None Include="ActivosFijosDataSet2.xsc">
+      <DependentUpon>ActivosFijosDataSet2.xsd</DependentUpon>
     </None>
-    <None Include="ActivosFijosDataSet.xsd">
+    <None Include="ActivosFijosDataSet2.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>ActivosFijosDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>ActivosFijosDataSet2.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="ActivosFijosDataSet.xss">
-      <DependentUpon>ActivosFijosDataSet.xsd</DependentUpon>
+    <None Include="ActivosFijosDataSet2.xss">
+      <DependentUpon>ActivosFijosDataSet2.xsd</DependentUpon>
     </None>
     <None Include="app.config" />
     <None Include="img\actualizar.jpg" />
