--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -253,6 +253,12 @@
     <Compile Include="FrmEditarLocal.Designer.cs">
       <DependentUpon>FrmEditarLocal.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmExcel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmExcel.Designer.cs">
+      <DependentUpon>FrmExcel.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -271,6 +277,7 @@
     <Compile Include="FrmMVMReporte.Designer.cs">
       <DependentUpon>FrmMVMReporte.cs</DependentUpon>
     </Compile>
+    <Compile Include="Importar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -394,6 +401,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEditarLocal.resx">
       <DependentUpon>FrmEditarLocal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmExcel.resx">
+      <DependentUpon>FrmExcel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
