--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DConexion.cs" />
     <Compile Include="DACFLOCT_LOCAL.cs" />
     <Compile Include="DDacfLOCt_Local.cs" />
+    <Compile Include="DMovimiento_Transferencia_Activo.cs" />
     <Compile Include="DPostres.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prueba.cs" />
