--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -84,7 +84,6 @@
     </Compile>
     <Compile Include="DataSet2.cs">
       <DependentUpon>DataSet2.xsd</DependentUpon>
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="DataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -373,6 +372,12 @@
     <Compile Include="FrmacfACFp_Activo_Fijo.Designer.cs">
       <DependentUpon>FrmacfACFp_Activo_Fijo.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmMovimientoTransferecnaiActivo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMovimientoTransferecnaiActivo.Designer.cs">
+      <DependentUpon>FrmMovimientoTransferecnaiActivo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMovimiento_Transferencia_Activo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -593,6 +598,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmacfACFp_Activo_Fijo.resx">
       <DependentUpon>FrmacfACFp_Activo_Fijo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmMovimientoTransferecnaiActivo.resx">
+      <DependentUpon>FrmMovimientoTransferecnaiActivo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMovimiento_Transferencia_Activo.resx">
       <DependentUpon>FrmMovimiento_Transferencia_Activo.cs</DependentUpon>
