--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -300,6 +300,18 @@
     <Compile Include="ACFLOCT_LOCAL.Designer.cs">
       <DependentUpon>ACFLOCT_LOCAL.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmAjusteValorBien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAjusteValorBien.Designer.cs">
+      <DependentUpon>FrmAjusteValorBien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmAjusteVidaUtil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAjusteVidaUtil.Designer.cs">
+      <DependentUpon>FrmAjusteVidaUtil.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmbdiCAFpClaseDeActivoFijo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -562,6 +574,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAgregarNuevLocal.resx">
       <DependentUpon>FrmAgregarNuevLocal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAjusteValorBien.resx">
+      <DependentUpon>FrmAjusteValorBien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmAjusteVidaUtil.resx">
+      <DependentUpon>FrmAjusteVidaUtil.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmbdiCAFpClaseDeActivoFijo.resx">
       <DependentUpon>FrmbdiCAFpClaseDeActivoFijo.cs</DependentUpon>
